community-board-detail complete

--- a/web/resources/css/module/element.css
+++ b/web/resources/css/module/element.css
@@ -260,7 +260,6 @@ input.form-control.input-box {
 }
 
 
-
 .card.community-card ._thumbnail {
     width: 100%;
     padding-top: 45%;
@@ -359,7 +358,7 @@ input.form-control.input-box {
     cursor: pointer;
 }
 
-.card.farm-card ._thumbnail > ._bookmark svg{
+.card.farm-card ._thumbnail > ._bookmark svg {
     fill: var(--gray-light);
 }
 
@@ -935,6 +934,11 @@ input.form-control.input-box {
     display: flex;
     margin-bottom: 4px;
     max-width: 480px;
+}
+
+._comment ._media ._comment-text > * {
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 ._comment ._media ._comment-text > ._new {
