manual, magazine done

--- a/web/resources/css/module/element.css
+++ b/web/resources/css/module/element.css
@@ -258,6 +258,7 @@ input.form-control.input-box {
     border: var(--border-1px) var(--gray-high-light);
     border-radius: var(--radius-5);
     cursor: pointer;
+    min-height: 304px;
 }
 
 .card.community-card ._thumbnail {
