farm-detail complete exclude first and second tab

--- a/web/resources/css/layout/layout.css
+++ b/web/resources/css/layout/layout.css
@@ -230,6 +230,7 @@ body {
     transform: translate(-50%, 50%);
     width: 160px;
     height: 160px;
+    border-radius: 50%;
 }
 
 #content-wrapper ._detail-banner ._profile-image ._edit {
