--- a/web/resources/css/module/element.css
+++ b/web/resources/css/module/element.css
@@ -1244,7 +1244,7 @@ input.form-control.input-box {
 }
 
 .right-container ._section ._more {
-    margin-top: 24px;
+    margin-top: 0;
     display: inline-block;
     cursor: pointer;
 }
