--- a/web/resources/css/layout/layout.css
+++ b/web/resources/css/layout/layout.css
@@ -158,6 +158,7 @@ body {
 
 #header-left-sidebar .card-body > div {
     padding: 8px 0 8px;
+    cursor: pointer;
 }
 
 #header-right-sidebar ul.list-group li.list-group-item {
@@ -201,6 +202,7 @@ body {
     margin-right: 34px;
 }
 
+#header-desc .list-group .list-group-item.is-active,
 #header-desc .list-group .list-group-item:hover {
     color: var(--brand-green);
 }
@@ -519,6 +521,7 @@ body {
     width: 100%;
     text-align: center;
     padding: 16px;
+    cursor: pointer;
 }
 
 #bottom-tab ul.list-group li.list-group-item {
