--- a/web/resources/css/layout/layout.css
+++ b/web/resources/css/layout/layout.css
@@ -275,7 +275,7 @@ body {
 
 }
 
-#content-wrapper ._content-banner ._recommend-container {
+#content-wrapper .banner-section ._recommend-container {
     padding-left: 36px;
     padding-right: 36px;
     position: absolute;
@@ -286,7 +286,7 @@ body {
     display: flex;
 }
 
-#content-wrapper ._content-banner ._recommend {
+#content-wrapper .banner-section ._recommend {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -299,23 +299,23 @@ body {
     display: flex;
 }
 
-#content-wrapper ._content-banner ._recommend span:first-of-type {
+#content-wrapper .banner-section ._recommend span:first-of-type {
     margin-right: 32px;
     white-space: nowrap;
 }
 
-#content-wrapper ._content-banner ._recommend span:nth-of-type(2) {
+#content-wrapper .banner-section ._recommend span:nth-of-type(2) {
     margin-left: 32px;
     padding-right: 142px;
 }
 
-#content-wrapper ._content-banner ._recommend span:first-of-type::after {
+#content-wrapper .banner-section ._recommend span:first-of-type::after {
     content: 'l';
     position: relative;
     left: 32px;
 }
 
-#content-wrapper ._content-banner ._recommend svg {
+#content-wrapper .banner-section ._recommend svg {
     position: absolute;
     right: 0;
     top: calc(50% - 8px);
@@ -333,9 +333,9 @@ body {
 }
 
 #content-wrapper .banner-section {
+    position: relative;
     margin-bottom: calc(64px + 46px);
 }
-
 
 #footer {
     padding-top: 48px;
