--- a/web/resources/css/module/summernote.css
+++ b/web/resources/css/module/summernote.css
@@ -26,6 +26,10 @@
     margin-bottom: 0 !important;
 }
 
+.summernote-container iframe {
+    width: 100%;
+}
+
 .note-icon-menu-check {
     display: none;
 }
