--- a/web/resources/css/module/element.css
+++ b/web/resources/css/module/element.css
@@ -186,6 +186,7 @@ input.form-control.input-box {
     padding-top: 5px;
     padding-bottom: 5px;
     width: 100%;
+    min-width: 140px;
     background-color: var(--basic-white);
 }
 
@@ -197,11 +198,18 @@ input.form-control.input-box {
     padding-top: 5px;
     padding-bottom: 5px;
 }
-
-.form-group.form-inner-button.form-sm {
+[data-toggle="dropdown"].form-group.form-inner-button {
     min-width: 140px;
-    max-width: 140px;
-    width: 100%;
+    max-width: 200px;
+}
+
+[data-toggle="dropdown"].form-group.form-inner-button.form-sm {
+    min-width: 140px;
+    max-width: 200px;
+}
+
+[data-toggle="dropdown"].form-group.form-inner-button.min-content {
+    width: min-content;
 }
 
 .form-group.form-inner-button.form-sm input {
@@ -216,11 +224,6 @@ input.form-control.input-box {
     top: 50%;
     transform: var(--translate-tb-center);
     cursor: pointer;
-}
-
-.dropdown-menu.dropdown-sm {
-    min-width: 0;
-    max-width: 140px;
 }
 
 /*Datepicker*/
@@ -1346,14 +1349,6 @@ input.form-control.input-box {
     padding-left: 24px;
     padding-right: 24px;
     padding-bottom: 24px;
-}
-
-.board-write-container .form-group.form-inner-button.form-sm {
-    max-width: 166px;
-}
-
-.board-write-container .dropdown-menu.dropdown-sm {
-    max-width: 166px;
 }
 
 #tab-trace ._traces ._trace:not(:last-child) {
