--- a/web/resources/css/module/element.css
+++ b/web/resources/css/module/element.css
@@ -1505,3 +1505,35 @@ input.form-control.input-box {
 .carousel-card {
     width: 50%;
 }
+
+#haon_spinner:not([hidden]) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+}
+
+#haon_spinner::after {
+    content: "";
+    width: 80px;
+    height: 80px;
+    border: 5px solid var(--gray-high-light);
+    border-top: 5px solid var(--brand-green);
+    border-radius: 100%;
+    will-change: transform;
+    animation: spin 1s infinite linear
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
