로그인, 회원가입, 회원가입 정보 입력 반응형 완료, QR-> QR다운로드로 업데이트

--- a/web/resources/css/layout/layout.css
+++ b/web/resources/css/layout/layout.css
@@ -29,7 +29,7 @@ body {
 }
 
 #header-back-theme {
-    height: 66px;
+    height: auto;
     background-color: var(--basic-white);
     position: sticky;
     z-index: 2;
@@ -44,9 +44,16 @@ body {
 }
 
 #header-back-theme .navbar {
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-right: 40px;
+    padding: 22px 24px;
+}
+
+#header-back-theme .navbar > * {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+#header-back-theme .nav-link {
+    padding: 0;
 }
 
 #header-back-theme .navbar .navbar-brand,
