검색페이지 반응형 완료 및 모달 부분 반응형 파일 추가

--- a/web/resources/css/layout/res-layout.css
+++ b/web/resources/css/layout/res-layout.css
@@ -192,6 +192,7 @@
 
     .owl-carousel .card.community-card {
         height: min-content;
+        min-height: fit-content;
     }
 
     .owl-carousel .card.farm-card {
