--- a/web/resources/css/module/res-element.css
+++ b/web/resources/css/module/res-element.css
@@ -30,6 +30,107 @@
 }
 
 @media (max-width: 767px) {
+    .community-mobile-container .filter-dropdown-container {
+        margin-left: -24px;
+        margin-right: -24px;
+        border-bottom: var(--border-1px) var(--gray-high-light);
+        margin-bottom: 24px;
+    }
+
+    .community-mobile-container .filter-dropdown-container .dropdown-menu {
+        width: 100% !important;
+        position: fixed !important;
+        left: 0 !important;
+        top: 116px !important;
+        margin-top: 0;
+        margin-bottom: 0;
+        border-left: none;
+        border-right: none;
+        transform: none !important;
+    }
+
+    .community-mobile-container .filter-dropdown-container .dropdown.input-dropdown .dropdown-menu a {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .community-mobile-container [data-toggle="dropdown"].form-group.form-inner-button {
+        min-width: initial;
+        max-width: initial;
+        width: auto;
+    }
+
+    .community-mobile-container .right-filter-dropdown-container {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .community-mobile-container .form-group.form-inner-button.form-sm svg {
+        right: 24px;
+    }
+
+    .community-mobile-container .card-container-deck,
+    .community-mobile-container .community-container-deck {
+        margin: -12px;
+    }
+
+    .community-mobile-container .card-container-deck .p-8,
+    .community-mobile-container .community-container-deck .p-8 {
+        padding: 12px;
+    }
+
+    .community-mobile-container .community-container-deck .card.community-card,
+    .community-mobile-container .community-container-deck .card.farm-card {
+        min-height: fit-content;
+    }
+
+    .community-mobile-container .form-group.form-inner-button input.dropdown-input:disabled,
+    .community-mobile-container .form-group.form-inner-button input.dropdown-input,
+    .community-mobile-container .filter-dropdown-container .form-group.form-inner-button.form-md.form-gray input,
+    .community-mobile-container .filter-dropdown-container .form-group.form-inner-button.form-md.form-green input {
+        background-color: var(--basic-white);
+        color: var(--gray-dark-low);
+        border: none;
+        padding: 16px 24px;
+    }
+
+    .community-mobile-container .filter-dropdown-container .form-group.form-inner-button.form-md.form-green input {
+        width: 140px;
+    }
+
+    .community-mobile-container .filter-dropdown-container .form-group.form-inner-button.form-md.form-gray input {
+        border-left: var(--border-1px) var(--gray-high-light);
+        border-right: var(--border-1px) var(--gray-high-light);
+    }
+
+    .community-mobile-container .form-group.form-inner-button input.dropdown-input:disabled,
+    .community-mobile-container .form-group.form-inner-button .dropdown-input svg *,
+    .community-mobile-container .filter-dropdown-container .form-group.form-inner-button.form-md.form-gray svg *,
+    .community-mobile-container .filter-dropdown-container .form-group.form-inner-button.form-md.form-green svg * {
+        fill: var(--gray-dark-low);
+    }
+
+    .community-mobile-container .filter-dropdown-container > .dropdown:not(:first-of-type) {
+        margin-left: 0;
+    }
+
+    .community-mobile-container {
+        min-height: 100vh;
+        padding-bottom: 24px;
+    }
+
+    #content-wrapper .community-mobile-container .section {
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+
+    .community-mobile-container .section-title ._title,
+    .community-mobile-container .section-title ._desc {
+        display: none;
+    }
+
     .form-group > label {
         font-size: var(--font-16);
         line-height: var(--line-24);
