농장 상세 및 농장 상세 관리 페이지 반응형 완료

--- a/web/resources/css/module/element.css
+++ b/web/resources/css/module/element.css
@@ -891,7 +891,7 @@ input.form-control.input-box {
 }
 
 .farm-detail ._desc .summernote-container iframe {
-    width: 640px;
+    width: 100%;
     max-width: 640px;
 }
 
