--- a/web/resources/css/layout/res-layout.css
+++ b/web/resources/css/layout/res-layout.css
@@ -316,8 +316,13 @@
 
 @media (min-width: 963px) {
     .row-cols-4 > * {
-        flex: 0 0 33.333%;
-        max-width: 33.333%;
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+
+    .row-cols-2 > * {
+        flex: 0 0 50%;
+        max-width: 50%;
     }
 }
 
