--- a/web/resources/css/module/element.css
+++ b/web/resources/css/module/element.css
@@ -1130,7 +1130,7 @@ input.form-control.input-box {
 
 .community-container ._detail ._title ._right-option {
     position: absolute;
-    top: 50%;
+    top: 18px;
     right: 0;
     transform: var(--translate-tb-center);
     z-index: 1;
